--- a/camera.html
+++ b/camera.html
@@ -134,7 +134,7 @@
         <canvas class="illustration-canvas"></cavnas>
         
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <div class="footer-text">
           <p>
             Pose Animator runs TF.js <strong>FaceMesh</strong> and <strong>PoseNet</strong> models to animate SVG illustrations with camera feed / static images.<br>
@@ -143,7 +143,7 @@
             (PoseNet model config - MobileNetV1, output stride 16, quant bytes 2)
           </p>
         </div>
-      </div>
+      </div> -->
     <script src="camera.js"></script>
 </body>
 
